--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <input id="text" type="text" value="https://hogangnono.com" style="width:80%" /><button>submit</button><br />
+    <input id="text" type="text" value="https://47canal.us/" style="width:80%" /><button>submit</button><br />
     <div id="qrcode"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
